--- a/application/index/view/wf/wfdesc.html
+++ b/application/index/view/wf/wfdesc.html
@@ -46,7 +46,7 @@
 		var ifm= document.getElementById("iframepage");   
 		var subWeb = document.frames ? document.frames["iframepage"].document : ifm.contentDocument;   
 		if(ifm != null && subWeb != null) {
-		   ifm.height = subWeb.body.scrollHeight;
+		   ifm.height = '100%';
 		   ifm.width = '100%';
 		}   
 	} 
