msg_return 移至 wf.php

--- a/application/index/view/wf/wfcheck.html
+++ b/application/index/view/wf/wfcheck.html
@@ -95,7 +95,7 @@
 					<a class="btn btn-primary radius" id='nexbton' onclick='tj("ok")' >提交</a> 
 					<a class="btn btn-primary radius" id='backbton' onclick='tj("back")'value='back' >回退</a> 
 					<a class="btn btn-primary radius" id='singbton' onclick='tj("sing")' value='sing' >会签</a>
-					<a class="btn btn-primary radius" id='bupload'onclick="layer_show('上传','{:url(\'upindex\', [\'id\' => \'upload\'])}','140','160')">附件</a> 
+					<a class="btn btn-primary radius" id='bupload'onclick="layer_show('上传','{:url(\'wfup\', [\'id\' => \'upload\'])}','140','160')">附件</a> 
 				{else/}
 					<a class="btn btn-primary radius" id='nexbton' onclick='sing("sok")' >会签提交</a> 
 					<a class="btn btn-primary radius" id='backbton' onclick='sing("sback")'value='back' >会签回退</a> 
