--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -3,7 +3,7 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="{:url('index')}">
 		Tpflow</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="/aboutHui.shtml"></a> 
-			<span class="logo navbar-slogan f-l mr-10 hidden-xs"> V3.0-dev</span> 
+			<span class="logo navbar-slogan f-l mr-10 hidden-xs"> V3.0</span> 
 			<span class='logo navbar-slogan f-l mr-10 hidden-xs'><b>工作流插件</b>  </span>
 			<span class='logo navbar-slogan f-l mr-10 hidden-xs'>开源协议：MIT  </span>
 			<span class='logo navbar-slogan f-l mr-10 hidden-xs'>作者：蝈蝈（1838188896） 交流群：532797225</span>
