--- a/application/index/view/news/add.html
+++ b/application/index/view/news/add.html
@@ -1,5 +1,4 @@
 {include file='pub/base' /}
-  <link rel="stylesheet" href="__LIB__/multiple-select/multiple-select.css" />
 <article class="page-container">
 		{present name="info.id"}
 			<form action="{:url('edit')}" method="post" name="form" id="form">
@@ -37,7 +36,7 @@
 			<td></td><td>
 			
 			</td>
-			</tr><tr><td>新闻内容</td><td colspan="3" ><textarea name='new_con'  datatype="*"  id="editor" type="text/plain" style="width:100%;height:300px;">
+			</tr><tr><td>新闻内容</td><td colspan="3" ><textarea name='new_con'  datatype="*"   type="text/plain" style="width:100%;height:300px;">
 			{$info.new_con ?? ''}
 			</textarea> </td></tr>
 		</table>
@@ -52,9 +51,6 @@
 </article>
 
 
-<script type="text/javascript" src="__LIB__/ueditor/1.4.3/ueditor.config.js"></script> 
-<script type="text/javascript" src="__LIB__/ueditor/1.4.3/ueditor.all.min.js"> </script> 
-<script type="text/javascript" src="__LIB__/ueditor/1.4.3/lang/zh-cn/zh-cn.js"></script>
 <script type="text/javascript">
 $(function(){
 	$("[name='new_top'][value='{$info.new_top ?? ''}']").attr("checked",true);
@@ -73,7 +69,7 @@ $(function(){
                 ajax_progress(ret);
             }
         });
-	var ue = UE.getEditor('editor');
+	
 });
 </script>
 <!--/请在上方写此页面业务相关的脚本-->
