fix wf_mode 1 err

--- a/application/index/view/wf/wfatt.html
+++ b/application/index/view/wf/wfatt.html
@@ -189,4 +189,8 @@ $(function(){
             }
         });
 });
+var wf_mode = "{:isset($one.wf_mode)?$one.wf_mode:'0'}";
+if(wf_mode ==1){
+	check_from();	
+}
 </script>
