--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -3,10 +3,27 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="{:url('index')}">
 		Tpflow</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="/aboutHui.shtml"></a> 
-			<span class="logo navbar-slogan f-l mr-10 hidden-xs"> V3.0</span> 
+			<span class="logo navbar-slogan f-l mr-10 hidden-xs"> V3.1</span> 
 			<span class='logo navbar-slogan f-l mr-10 hidden-xs'><b>工作流插件</b>  </span>
 			<span class='logo navbar-slogan f-l mr-10 hidden-xs'>开源协议：MIT  </span>
 			<span class='logo navbar-slogan f-l mr-10 hidden-xs'>作者：蝈蝈（1838188896） 交流群：532797225</span>
+		</nav>
+		<nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
+			<ul class="cl">
+				<li>{if condition='$Think.session.uid'}
+欢迎您：{$Think.session.uname} 
+{else/}
+	请先模拟登入！
+{/if}</li>
+				<li class="dropDown dropDown_hover">
+					<a href="#" class="dropDown_A">切换账户 <i class="Hui-iconfont">&#xe6d5;</i></a>
+					<ul class="dropDown-menu menu radius box-shadow">
+						{volist name='user' id='k'}
+							<li><a href="{:url('login',['id'=>$k.id,'user'=>$k.username,'role'=>$k.role])}">{$k.username}</a></li>
+						{/volist}
+				</ul>
+			</li>
+			</ul>
 		</nav>
 	</div>
 </div>
@@ -26,6 +43,15 @@
 				<dd style="display: block;"><ul>
 				<li><a data-href="{:url('wf/wfindex')}" data-title="工作流列表" href="javascript:void(0)">工作流列表</a></li>
 				<li><a data-href="{:url('wf/wfjk')}" data-title="工作流监控" href="javascript:void(0)">工作流监控</a></li>
+				</dd>
+			</dl>
+			<dl>
+				<dt><i class="Hui-iconfont"></i> 在线帮助<i class="Hui-iconfont menu_dropdown-arrow"></i></dt>
+				<dd style="display: block;"><ul>
+				<li><a data-href="http://www.cojz8.com" data-title="官方博客" href="javascript:void(0)">官方博客</a></li>
+				<li><a data-href="{:url('doc')}" data-title="在线开发文档（精简）" href="javascript:void(0)">在线开发文档（精简）</a></li>
+				<li><a data-href="https://www.kancloud.cn/guowenbin/tpflow/" data-title="看云完整文档" href="javascript:void(0)">看云完整文档</a></li>
+				<li><a data-href="https://gitee.com/ntdgg/tpflow/" data-title="源码下载" href="javascript:void(0)">源码下载</a></li>
 				</dd>
 			</dl>
 			
