--- a/application/index/view/news/add.html
+++ b/application/index/view/news/add.html
@@ -1,4 +1,5 @@
 {include file='pub/base' /}
+  <link rel="stylesheet" href="__LIB__/multiple-select/multiple-select.css" />
 <article class="page-container">
 		{present name="info.id"}
 			<form action="{:url('edit')}" method="post" name="form" id="form">
@@ -36,9 +37,7 @@
 			<td></td><td>
 			
 			</td>
-			</tr><tr><td>新闻内容</td><td colspan="3" ><textarea name='new_con'  datatype="*"   type="text/plain" style="width:100%;height:300px;">
-			{$info.new_con ?? ''}
-			</textarea> </td></tr>
+			</tr><tr><td>新闻内容</td><td colspan="3" ><textarea name='new_con'  datatype="*"  type="text/plain" style="width:100%;height:300px;">{$info.new_con ?? ''}</textarea> </td></tr>
 		</table>
 		
 		<div class="row cl">
@@ -49,6 +48,7 @@
 		</div>
 	</form>
 </article>
+
 
 
 <script type="text/javascript">
@@ -69,7 +69,7 @@ $(function(){
                 ajax_progress(ret);
             }
         });
-	
+
 });
 </script>
 <!--/请在上方写此页面业务相关的脚本-->
