--- a/application/index/view/wf/wfindex.html
+++ b/application/index/view/wf/wfindex.html
@@ -28,7 +28,7 @@
         <td>
 		{if condition='$vo.edit ==""'}
 	   <a class='btn  radius size-S' onclick="layer_show('修改','{:url('wfedit',['id'=>$vo.id])}','550','400')"> 修改</a>
-       <a class='btn  radius size-S' data-title="官方博客" data-href="{:url('/index/wf/wfdesc',['flow_id'=>$vo['id']])}" onclick="Hui_admin_tab(this)" > 设计流程</a>
+       <a class='btn  radius size-S' data-title="设计流程" data-href="{:url('/index/wf/wfdesc',['flow_id'=>$vo['id']])}" onclick="Hui_admin_tab(this)" > 设计流程</a>
 		{else/}
 		<a class='btn  radius size-S'> 运行中....</a>
 	   {/if}
