--- a/application/index/view/wf/wfatt.html
+++ b/application/index/view/wf/wfatt.html
@@ -93,7 +93,7 @@
 							<tr><td>{$key}</td><td>{$vo}</td></tr>
 						{/volist}
 						</table>{else/}
-						<h4>Tip:请按右侧选择添加办理人员</h4>
+						<h4>Tip:请从左侧选择添加</h4>
 						{/if}
 					</span>
 					
@@ -111,7 +111,7 @@
 							<tr><td>{$key}</td><td>{$vo}</td></tr>
 						{/volist}
 						</table>	{else/}
-						<h4>Tip:请按右侧选择添加办理人员</h4>{/if}
+						<h4>Tip:请从左侧选择添加</h4>{/if}
 					</span>	
 					</td>	
 			</tr>
@@ -126,7 +126,7 @@
 						{/volist}
 						</table>
 						{else/}
-						<h4>Tip:请按右侧选择添加办理人员</h4>
+						<h4>Tip:请从左侧选择添加</h4>
 						{/if}
 			</span>
 				
