--- a/application/index/view/wf/wfcheck.html
+++ b/application/index/view/wf/wfcheck.html
@@ -93,8 +93,12 @@
 				<input  name='sing_st' value='{$flowinfo.sing_st}' type='hidden'>
 				{if condition='$flowinfo.sing_st == 0'}
 					<a class="btn btn-primary radius" id='nexbton' onclick='tj("ok")' >提交</a> 
+					{if condition='$flowinfo.process.is_back != 2'}
 					<a class="btn btn-primary radius" id='backbton' onclick='tj("back")'value='back' >回退</a> 
+					{/if}
+					{if condition='$flowinfo.process.is_sing != 2'}
 					<a class="btn btn-primary radius" id='singbton' onclick='tj("sing")' value='sing' >会签</a>
+					{/if}
 					<a class="btn btn-primary radius" id='bupload'onclick="layer_show('上传','{:url(\'wfup\', [\'id\' => \'upload\'])}','140','160')">附件</a> 
 				{else/}
 					<a class="btn btn-primary radius" id='nexbton' onclick='sing("sok")' >会签提交</a> 
