1、修复count数组在部分PHP版本下出错；2、新增工作流日志调用方式

--- a/application/index/view/news/view.html
+++ b/application/index/view/news/view.html
@@ -11,6 +11,8 @@
 			</tr><td>新闻内容:</td><td colspan="3" >{$info.new_con|raw}
 			</td></tr>
 		</table>
+
+		{:action('wf/wflogs',['id'=>1,'wf_type'=>'news'])}
 </article>
 </body>
 </html>
