修正工作流调用方式

--- a/application/index/view/wf/wfadd.html
+++ b/application/index/view/wf/wfadd.html
@@ -17,7 +17,7 @@
 			<span class="select-box">
 				<select name="type"  class="select"  datatype="*" >
 					{volist name='type' id='k'}
-					<option value="{$key}">{$k}</option>
+					<option value="{$k.name}">{$k.title}</option>
 					{/volist}
 				</select>
 				</span>
