--- a/application/index/view/wf/wfindex.html
+++ b/application/index/view/wf/wfindex.html
@@ -1,6 +1,6 @@
 {include file='pub/base' /}
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i>  Tpflow 工作流插件示例 
-<a onclick="layer_show('添加工作流','{:url('wfadd')}','550','400')" class="btn btn-primary radius">添加工作流</a>
+<a onclick="layer_open('添加工作流','{:url('wfadd')}','550','400')" class="btn btn-primary radius">添加工作流</a>
 </nav>
 <div class="page-container">
 
@@ -27,7 +27,7 @@
 		 {/if}</td>
         <td>
 		{if condition='$vo.edit ==""'}
-	   <a class='btn  radius size-S' onclick="layer_show('修改','{:url('wfedit',['id'=>$vo.id])}','550','400')"> 修改</a>
+	   <a class='btn  radius size-S' onclick="layer_open('修改','{:url('wfedit',['id'=>$vo.id])}','550','400')"> 修改</a>
        <a class='btn  radius size-S' data-title="设计流程" data-href="{:url('/index/wf/wfdesc',['flow_id'=>$vo['id']])}" onclick="Hui_admin_tab(this)" > 设计流程</a>
 		{else/}
 		<a class='btn  radius size-S'> 运行中....</a>
@@ -37,8 +37,6 @@
 			{else/}
 		 <a class='btn  radius size-S' href="{:url('wfchange',['id'=>$vo['id'],'status'=>0])}" target=> 启用</a>
 	   {/if}
-	   
-	   
 	   </td>
     </tr>
     {/volist}
