--- a/application/index/view/index/welcome.html
+++ b/application/index/view/index/welcome.html
@@ -2,7 +2,7 @@
 <body onload="prettyPrint()">
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 欢迎使用，Tpflow 工作流插件示例</nav>
 <div class="page-container">
-<h3>当前版本为：V3.1-正式版</h3>
+<h3>当前版本为：V3.2-开发版</h3>
 
 <article class="f-14 l-30 mt-20 mr-50">
 			<p>致亲爱的Tpflow用户：</p>
