--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -3,18 +3,14 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="{:url('index')}">
 		Tpflow</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="/aboutHui.shtml"></a> 
-			<span class="logo navbar-slogan f-l mr-10 hidden-xs"> V3.1</span> 
+			<span class="logo navbar-slogan f-l mr-10 hidden-xs"> V3.2</span> 
 			<span class='logo navbar-slogan f-l mr-10 hidden-xs'><b>工作流插件</b>  </span>
 			<span class='logo navbar-slogan f-l mr-10 hidden-xs'>开源协议：MIT  </span>
-			<span class='logo navbar-slogan f-l mr-10 hidden-xs'>作者：蝈蝈（1838188896） 交流群：532797225</span>
+			<span class='logo navbar-slogan f-l mr-10 hidden-xs'>作者：蝈蝈（1838188896） 交流群②：778657302</span>
 		</nav>
 		<nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
 			<ul class="cl">
-				<li>{if condition='$Think.session.uid'}
-欢迎您：{$Think.session.uname} 
-{else/}
-	请先模拟登入！
-{/if}</li>
+				<li>{if condition='$Think.session.uid'}欢迎您：{$Think.session.uname} {else/}请先模拟登入！{/if}</li>
 				<li class="dropDown dropDown_hover">
 					<a href="#" class="dropDown_A">切换账户 <i class="Hui-iconfont">&#xe6d5;</i></a>
 					<ul class="dropDown-menu menu radius box-shadow">
