视图文件调整

--- a/application/index/view/index/welcome.html
+++ b/application/index/view/index/welcome.html
@@ -1,5 +1,5 @@
 {include file='pub/base' /}
-<body onload="prettyPrint()">
+<body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 欢迎使用，Tpflow 工作流插件示例</nav>
 <div class="page-container">
 <h3>当前版本为：V3.2-开发版</h3>
@@ -15,4 +15,3 @@
 
 </body>
 </html>
-<script type="text/javascript" src="http://cdn.bootcss.com/prettify/r298/prettify.min.js"></script>
