--- a/extend/workflow/view/wfadd.html
+++ b/extend/workflow/view/wfadd.html
@@ -1,19 +1,19 @@
-
+<link rel="stylesheet" type="text/css" href="__Flow__/workflow-common.css"/>
 <article class="page-container">
 		{present name="info.id"}
-			<form action="{:url('wfedit')}" method="post" name="form" id="form">
+			<form action="{:url($int_url.'/wf/wfedit')}" method="post" name="form" id="form">
 			<input type="hidden" name="id" value="{$info.id}">
 		{else /}
-			<form action="{:url('wfadd')}" method="post" name="form" id="form">
+			<form action="{:url($int_url.'/wf/wfadd')}" method="post" name="form" id="form">
 		{/present}
-		<table class="table table-border table-bordered table-bg">
+		<table class="table">
 			<tr>
-			<td style='width:75px'>流程名称</td>
+			<th style='width:75px'>流程名称</th>
 			<td style='width:330px'><input type="text" class="input-text" value="{$info.flow_name ?? ''}" name="flow_name"  datatype="*" ></td>
 			
 			</tr>
 			<tr>
-			<td>流程类型</td><td>
+			<th>流程类型</th><td>
 			<span class="select-box">
 				<select name="type"  class="select"  datatype="*" >
 					{volist name='type' id='k'}
@@ -24,25 +24,26 @@
 			</td>
 			</tr>
 			<tr>
-			<td style='width:75px'>排序值</td>
+			<th style='width:75px'>排序值</th>
 			<td style='width:330px'><input type="text" class="input-text" value="{$info.sort_order ?? ''}" name="sort_order"  datatype="*" ></td>
 			</tr>
 			<tr>
 			<tr>
-			<td>流程描述</td><td>
+			<th>流程描述</th><td>
 			<textarea name='flow_desc'  datatype="*" style="width:100%;height:55px;">{$info.flow_desc ?? ''}</textarea></td>
 			
 			</tr>
 			<tr class='text-c'>
 			<td colspan=2>
-			<button  class="btn btn-primary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存</button>
-				<button  class="btn btn-default radius" type="button" onclick="layer_close()">&nbsp;&nbsp;取消&nbsp;&nbsp;</button></td>
+			<button  class="button" type="submit">&nbsp;&nbsp;保存&nbsp;&nbsp;</button>
+				<button  class="button" type="button" onclick="layer_close()">&nbsp;&nbsp;取消&nbsp;&nbsp;</button></td>
 			</tr>
-			
 		</table>
 	</form>
 </article>
-
+<script type="text/javascript" src="__Flow__/jquery-1.7.2.min.js" ></script>
+<script type="text/javascript" src="__Flow__/lib/layer/2.4/layer.js" ></script>
+<script type="text/javascript" src="__Flow__/workflow-common.3.0.js" ></script>
 <script type="text/javascript">
 $(function(){
 	$("[name='type']").find("[value='{$info.type ?? '0'}']").attr("selected",true);
